RESOLVED FIXED186936
[Cocoa] REGRESSION(W3C): actions for key equivalents are not respected
https://bugs.webkit.org/show_bug.cgi?id=186936
Summary [Cocoa] REGRESSION(W3C): actions for key equivalents are not respected
Blaze Burg
Reported 2018-06-22 12:38:02 PDT
Due to a logic error, the client is always told that there is no user interaction being simulated.
Attachments
Patch (1.95 KB, patch)
2018-06-22 12:44 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2018-06-22 12:44:03 PDT
WebKit Commit Bot
Comment 2 2018-06-22 13:32:42 PDT
Comment on attachment 343355 [details] Patch Clearing flags on attachment: 343355 Committed r233096: <https://trac.webkit.org/changeset/233096>
WebKit Commit Bot
Comment 3 2018-06-22 13:32:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-06-22 13:33:23 PDT
Note You need to log in before you can comment on or make changes to this bug.