[Cocoa] REGRESSION(W3C): actions for key equivalents are not respected https://bugs.webkit.org/show_bug.cgi?id=186936

Reviewed by Timothy Hatcher.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::isSimulatingUserInteraction const):
This erroneously reported false unless there was both a mouse and key interaction
being dispatched, which is not possible in the current serial event simulation model.
As a result, Safari could not tell whether the action came from a simulated event
or the user, and thus rejected all key equivalents like Cmd-A,V,C,X.


Canonical link: https://commits.webkit.org/202189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233096 268f45cc-cd09-0410-ab3c-d52691b4dbfc